# awesome-prompts

./: .cursorrules  .env.example  .gitignore  AGENTS.md  AGENTS_FUNCTIONS.md  AGENTS_FUNCTIONS_VERIFIED.md  ARCHITECTURE.md  ARCHITECT_SDLC_EXAMPLES.md  AUTONOMOUS_DEVELOPER_README.md  CLAUDE.md  CODE_REVIEW_AGENT_SETUP.md  COMPLETE_USAGE_GUIDE.md  CONSOLIDATION_SUMMARY.md  EXPORTER_QUICK_START.md  FEEDBACK_SYSTEM.md  FUNCTION_AUDIT_SUMMARY.md  FUNCTION_DISPATCH_TEMPLATE.md  FUNCTION_EXAMPLES.md  FUNCTION_QUICK_REFERENCE.md  IMPLEMENTER_SDLC_EXAMPLES.md  INSTALLATION.md  ISSUES_DOCUMENTATION_MAPPING.md  NEW_FEATURES_SUMMARY.md  ORCHESTRATOR_SDLC_EXAMPLES.md  QUALITY_SDLC_EXAMPLES.md  README.html  README.md  README_FRAMEWORK.md  RegulatoryCodeAuditor.txt  SDLC_EXAMPLES_INDEX.md  SETUP_GUIDE.md  SHARING_CHECKLIST.md  SKILLS_REFERENCE_VERIFIED.md  SPECIALIST_AGENT_MODES.md  SPECIALIST_MODES_MAPPING.md  TOOLS_FUNCTIONS_VERIFIED.md  USAGE.md  git_handler.py
.claude/: settings.json  settings.local.json  skills_context.md
.continue/: config.json
.cursor/: cursor.config.json
.feedback/: FEEDBACK_GUIDE.md  FEEDBACK_SUMMARY.md  README.md  feedback.yaml
.github/: copilot-instructions.md  copilot.yml
.windsurf/: hooks.json
agents/: README.md  ai_engineering_team_coordinator_agent.md  architect_agent.md  architecture_agent.md  architecture_refactorer_agent.md  autonomous_dev_agent.md  backend_systems_architect_agent.md  business_analyst_agent.md  code_review_agent.md  codebase_auditor_agent.md  quality_agent.md  (+15 more)
tools/token_optimizer/: detector.py  pyproject.toml  setup.py
(+583 files in other folders)
